--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/BrooksPatton/pwned-checker#readme",
   "dependencies": {
     "axios": "^0.15.2",
+    "chalk": "^1.1.3",
     "meow": "^3.7.0"
   },
   "devDependencies": {
