--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "axios": "^0.15.2",
     "chalk": "^1.1.3",
-    "meow": "^3.7.0"
+    "meow": "^3.7.0",
+    "moment": "^2.15.2"
   },
   "devDependencies": {
     "eslint": "^3.9.0",
