--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A command line tool to check if an email address has been pwned. Uses the https://haveibeenpwned.com/ api",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha test"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,13 @@
     "moment": "^2.15.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.9.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1"
+    "eslint-plugin-react": "^6.4.1",
+    "mocha": "^3.1.2",
+    "nyc": "^8.3.2"
   }
 }
