--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "chai": "^3.5.0",
     "eslint": "^3.9.0",
     "eslint-config-airbnb": "^12.0.0",
+    "eslint-config-standard": "^6.2.1",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-react": "^6.4.1",
+    "eslint-plugin-standard": "^2.0.1",
     "mocha": "^3.1.2",
     "nyc": "^8.3.2"
   }
