--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.15.2",
     "chalk": "^1.1.3",
+    "lodash": "^4.16.6",
     "meow": "^3.7.0",
     "moment": "^2.15.2"
   },
